refonte des tests